force-app/main/default/objects/Document_Record__c/Document_Record__c.object-meta.xml
<CustomObject>
    <description>This object stores all type of Document Information.</description>
    <label>Document Record</label>
    <nameField>
        <displayFormat>DOC-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>