force-app/main/default/objects/Document_Record__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description>Stores Content Document Record Id</description>
    <label>Content Document Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>