force-app/main/default/objects/Document_Record__c/fields/Content_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Name__c</fullName>
    <description>Stores upload the content document name</description>
    <label>Content Document Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>