force-app/main/default/objects/Document_Record__c/fields/Content_Download_Document__c.field-meta.xml
<CustomField>
    <fullName>Content_Download_Document__c</fullName>
    <description>The formula generates a hyperlink for downloading a document if a URL is available; otherwise, it returns an empty string.</description>
    <formula>If(ISBLANK(Content_Download_Url__c),&quot;&quot;,HYPERLINK(Content_Download_Url__c,&quot;Download Document&quot;,&quot;_blank&quot;))</formula>
    <label>Content Download Document</label>
    <type>Text</type>
</CustomField>