force-app/main/default/objects/Document_Record__c/fields/Content_Download_Url__c.field-meta.xml
<CustomField>
    <fullName>Content_Download_Url__c</fullName>
    <description>Stores Content Document Download Link.</description>
    <label>Content Download Url</label>
    <type>Url</type>
</CustomField>