force-app/main/default/objects/Document_Record__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <description>This field stores type of Document Categor. Ex: Child Care Program.</description>
    <label>Document Category</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>