force-app/main/default/objects/Document_Record__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <description>This field stores the current status of Document</description>
    <label>Document Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
                <default>true</default>
                <label>Uploaded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>