force-app/main/default/objects/Document_Record__c/fields/Document_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Sub_Type__c</fullName>
    <description>This field store sub type of document. For Example- If Person Verification is a type then Passport, License will be sub type</description>
    <label>Document Sub Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>