force-app/main/default/objects/Document_Record__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>This field stores the type of document. For Example - Person Varification</description>
    <label>Document Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>