force-app/main/default/objects/Document_Record__c/fields/Document_Uploaded_Source__c.field-meta.xml
<CustomField>
    <fullName>Document_Uploaded_Source__c</fullName>
    <description>This field stores the source of the document upload</description>
    <label>Document Uploaded Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Users</fullName>
            </value>
            <value>
                <fullName>Salesforce Core</fullName>
            </value>
            <value>
                <fullName>Backend Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>