force-app/main/default/objects/Document_Record__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field store document status Active or In Active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>