force-app/main/default/objects/Document_Record__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Stores source record id</description>
    <label>Record Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>